# Adventure2019

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  Vagrantfile  webchat.html  webgame.html
Sample_Data_files/: mirkwood.json  shire.json  solace.json
cookbooks/baseconfig/: .kitchen.yml  CHANGELOG.md  README.md  chefignore  metadata.rb
cookbooks/baseconfig/.delivery/: project.toml
cookbooks/baseconfig/.delivery/build_cookbook/: README.md
cookbooks/baseconfig/recipes/: default.rb
cookbooks/baseconfig/spec/unit/recipes/: default_spec.rb
cookbooks/baseconfig/test/integration/default/: default_test.rb
lib/: CMakeLists.txt  CMakeLists.txt.orig
lib/data/: CMakeLists.txt  commands.json  mirkwood.json  properties.json  testProperties.json  testUsers.json  users.json
lib/game/: CMakeLists.txt
lib/game/include/: AliasManager.h  Command.h  CommandExecutor.h  CommandParser.h  Game.h  PropertiesManager.h
lib/game/src/: AliasManager.cpp  Command.cpp  CommandExecutor.cpp  CommandParser.cpp  Game.cpp
lib/handler/: CMakeLists.txt
lib/handler/include/: AccountHandler.h  AvatarHandler.h  CharacterHandler.h  CombatHandler.h  ConnectionHandler.h  MagicHandler.h  PlayerAction.h  PlayerHandler.h  PropertiesManager.h  ResetHandler.h  WorldHandler.h
lib/handler/src/: AccountHandler.cpp  AvatarHandler.cpp  CharacterHandler.cpp  CombatHandler.cpp  ConnectionHandler.cpp  MagicHandler.cpp  PlayerAction.cpp  PlayerHandler.cpp  PropertiesManager.cpp  ResetHandler.cpp  WorldHandler.cpp
lib/logic/: CMakeLists.txt
lib/logic/include/: CharacterLogic.h  CombatLogic.h  GameLogic.h  PlayerLogic.h  ResetLogic.h
lib/logic/src/: CharacterLogic.cpp  CombatLogic.cpp  GameLogic.cpp  PlayerLogic.cpp  ResetLogic.cpp
lib/middleware/: CMakeLists.txt
lib/middleware/include/: DataManager.h  FileParser.h  json.hpp
lib/middleware/src/: DataManager.cpp  FileParser.cpp
lib/model/: CMakeLists.txt
lib/model/include/: AccountHandler.h  ActionHandler.h  ActionResult.h  Area.h  Avatar.h  Character.h  CombatInstance.h  CombatState.h  Command.h  CommandHandler.h  Door.h  Equipment.h  ExtraInfo.h  ExtraObjectInfo.h  Game.h  GameResponse.h  Greeter.h  Inventory.h  Item.h  MagicHandler.h  NPC.h  Object.h  Player.h  PlayerHandler.h  PropertiesManager.h  Reset.h  Response.h  Role.h  Room.h  Slot.h  Types.h  User.h  UserCollection.h  UserHandler.h  World.h  WorldHandler.h  user.h
lib/model/src/: AccountHandler.cpp  ActionHandler.cpp  ActionResult.cpp  Area.cpp  Character.cpp  CommandHandler.cpp  Door.cpp  Equipment.cpp  ExtraInfo.cpp  ExtraObjectInfo.cpp  Game.cpp  GameResponse.cpp  Greeter.cpp  Inventory.cpp  Item.cpp  MagicHandler.cpp  NPC.cpp  Object.cpp  Player.cpp  PlayerHandler.cpp  PropertiesManager.cpp  Reset.cpp  Room.cpp  Slot.cpp  User.cpp  UserCollection.cpp  UserHandler.cpp  World.cpp  WorldHandler.cpp
lib/networking/: CMakeLists.txt
lib/networking/include/: ClientMessageBuffer.h  Server.h
lib/networking/src/: Client.cpp  ClientMessageBuffer.cpp  Server.cpp
lib/nlohmann/: CMakeLists.txt
testdata/: users.json
testing/: CMakeLists.txt  accountHandler-test.cpp  aliasManager-test.cpp  area-test.cpp  avatarHandler-test.cpp  character-test.cpp  clientMessageBuffer-test.cpp  clientMessageBuffer.test.cpp  combat-test.cpp  combatHandler-test.cpp  commandHandler-test.cpp  commandParser-test.cpp  equipment-test.cpp  extraInfo-test.cpp  extraObjectInfo-test.cpp  game-test.cpp  integration-test.cpp  inventory-test.cpp  magicHandler-test.cpp  object-test.cpp  player-test.cpp  playerHandler-test.cpp  player_class_test.cpp  propertiesManager-test.cpp  readme.md  reset-test.cpp  room-test.cpp  user-test.cpp  world-test.cpp  worldHandler-test.cpp
testing/lib/: gmock-gtest-all.cc  gtest_main.cc
testing/lib/gmock/: gmock.h
testing/lib/gtest/: gtest.h
tools/: CMakeLists.txt
tools/chatclient/: ChatWindow.cpp
tools/chatserver/: CMakeLists.txt  chatserver.cpp
tools/chatserver/include/: MessageResult.h
tools/gameclient/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  gameclient.cpp
tools/gameserver/: CMakeLists.txt  gameserver.cpp
